<resources>
    <string name="app_name">RetailPOSApp</string>

    <!--Dashboard-->
    <string name="lbl_payment">Accept Payment</string>
    <string name="lbl_returns">Accept Returns</string>
    <string name="lbl_deals">Redeem Deals</string>
    <string name="lbl_redeem_deals">Redeem ThankUCash Deals</string>
    <string name="lbl_new_payment">Make new payments</string>
    <string name="lbl_return_refund">Accept return &amp; refund customer</string>
    <string name="lbl_tap_payment">Tap here to receive payment from customer</string>

    <string name="proceed_payment">Proceed Payment</string>
    <string name="proceed_draft">Save as Draft</string>
    <string name="new_invoice">New Invoice</string>

    <string-array name="customer_filter">
        <item>Filter</item>
        <item>Amount</item>
    </string-array>

    <string-array name="customer_sort">
        <item>Sort</item>
        <item>Sort by Name</item>
        <item>Sort by Date</item>
    </string-array>

</resources>