<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar_main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cvPayment"
        style="@style/CardViewStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="@dimen/_12sdp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/_10sdp">
            <ImageView
                android:id="@+id/ivLogoPayment"
                android:layout_width="@dimen/_50sdp"
                android:layout_height="@dimen/_50sdp"
                android:src="@drawable/ic_launcher_background"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"/>
            <TextView
                android:id="@+id/lbl_payment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toEndOf="@+id/ivLogoPayment"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginStart="@dimen/_10sdp"
                android:text="@string/lbl_payment"/>
            <TextView
                android:id="@+id/lbl_new_payment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lbl_new_payment"
                app:layout_constraintStart_toEndOf="@+id/ivLogoPayment"
                app:layout_constraintTop_toBottomOf="@+id/lbl_payment"
                android:layout_margin="@dimen/_10sdp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/ivLogoPayment"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="@dimen/_10sdp"
                android:textColor="@color/primaryColor"
                android:text="@string/lbl_tap_payment"/>
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cvReturn"
        style="@style/CardViewStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="@dimen/_12sdp"
        android:layout_marginTop="@dimen/_10sdp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cvPayment">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/_10sdp">
            <ImageView
                android:id="@+id/ivLogoReturn"
                android:layout_width="@dimen/_50sdp"
                android:layout_height="@dimen/_50sdp"
                android:src="@drawable/ic_launcher_background"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"/>
            <TextView
                android:id="@+id/lbl_returns"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toEndOf="@+id/ivLogoReturn"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginStart="@dimen/_10sdp"
                android:text="@string/lbl_returns"/>
            <TextView
                android:id="@+id/lbl_return_refund"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lbl_return_refund"
                app:layout_constraintStart_toEndOf="@+id/ivLogoReturn"
                app:layout_constraintTop_toBottomOf="@+id/lbl_returns"
                android:layout_margin="@dimen/_10sdp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/ivLogoReturn"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="@dimen/_10sdp"
                android:textColor="@color/primaryColor"
                android:text="@string/lbl_tap_payment"/>
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cvDeals"
        style="@style/CardViewStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="@dimen/_12sdp"
        android:layout_marginTop="@dimen/_10sdp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cvReturn">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/_10sdp">
            <ImageView
                android:id="@+id/ivLogoDeals"
                android:layout_width="@dimen/_50sdp"
                android:layout_height="@dimen/_50sdp"
                android:src="@drawable/ic_launcher_background"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"/>
            <TextView
                android:id="@+id/lbl_deals"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toEndOf="@+id/ivLogoDeals"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginStart="@dimen/_10sdp"
                android:text="@string/lbl_deals"/>
            <TextView
                android:id="@+id/lbl_redeem_deals"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lbl_redeem_deals"
                app:layout_constraintStart_toEndOf="@+id/ivLogoDeals"
                app:layout_constraintTop_toBottomOf="@+id/lbl_deals"
                android:layout_margin="@dimen/_10sdp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                app:layout_constraintTop_toBottomOf="@+id/ivLogoDeals"
                app:layout_constraintStart_toStartOf="parent"
                android:textColor="@color/primaryColor"
                android:text="@string/lbl_tap_payment"/>
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>